[package]
name = "hello-wasm"
authors = ["Sibaprasad Maiti <sibu.it13@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]



[dependencies]
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = ['console'] }